<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Android Demos</string>
    <string name="page_app_component">App Components</string>
    <string name="page_bond_service">Bound service</string>
    <string name="page_content_provider">Content Provider</string>
    <string name="page_activity">Activity</string>
    <string name="page_activity_save_and_restore_state">Saving and restoring transient UI state</string>
    <string name="page_activity_ExpandableListActivity">ExpandableListActivity</string>
    <string name="page_LauncherActivity">LauncherActivity</string>
    <string name="page_activity_start_and_finish">Start Activity and Finish Activity</string>
    <string name="page_LaunchMode">LaunchMode</string>
    <string name="page_Intent_and_Intent_Filter_Component">Intent and Intent-Filter - Component:\nUse Component start application 组件</string>
    <string name="page_Intent_and_Intent_Filter_action_and_category">Intent and Intent-Filter - action and category</string>
    <string name="page_intent_Filter_system_action">Intent-Filter - system action</string>
    <string name="page_intent_Filter_data_and_type">Intent-Filter - Data, and Type</string>
    <string name="page_intent_Flag">Intent-Flag</string>
    <string name="page_Fragment">Fragment</string>
    <string name="page_BottomSheetDialogFragment">BottomSheetDialogFragment</string>
    <string name="page_DialogFragment">DialogFragment</string>
    <string name="page_Base_DialogFragment">Base DialogFragment</string>
    <string name="page_data_storage">Data Storage</string>
    <string name="page_shared_preferences">SharedPreferences</string>
    <string name="page_sqlite">Sqlite</string>
    <string name="page_io">IO</string>
    <string name="page_sqlitedatabase">SQLiteDatabase</string>
    <string name="page_resource">Resource</string>
    <string name="page_dimension">Dimension</string>
    <string name="page_XML">XML</string>
    <string name="page_material">原始资源</string>
    <string name="page_String_and_Integer_and_Array">String, Integer, and Array</string>
    <string name="page_Color">Color</string>
    <string name="page_ColorStateList">Color-Color State List</string>
    <string name="page_Drawable">Drawable</string>
    <string name="page_StateDrawable">StateDrawable</string>
    <string name="page_VectorDrawable">VectorDrawable</string>
    <string name="page_ShapeDrawable">ShapeDrawable</string>
    <string name="page_LevelListDrawable">LevelList Drawable</string>
    <string name="page_LayerListDrawable">LayerList Drawable</string>
    <string name="page_ClipDrawable">Clip Drawable</string>
    <string name="page_drawable_vectorDrawable">VectorDrawable</string>
    <string name="page_DrawableFolder">Drawable Folder</string>
    <string name="page_decode_sampled_bitmap">Decode sampled bitmap</string>
    <string name="page_theme_choose">Theme Choose</string>
    <string name="page_theme_and_style">Theme and Style</string>
    <string name="page_theme_attr">Theme - Attr</string>
    <string name="page_theme_DeclareStyleable">Theme - DeclareStyleable for Custom View</string>
    <string name="page_theme_ColorFilter">Theme - ColorFilter</string>
    <string name="page_theme_tint">Theme - Tint</string>
    <string name="page_bitmap_4_screen_density_and_drawable_memory">Bitmap - Screen density and drawable memory</string>
    <string name="page_bitmap_4_managing_bitmap_memory">Managing Bitmap Memory</string>
    <string name="page_bitmap_three_level_cache">Bitmap three level cache</string>
    <string name="page_bitmap">Bitmap</string>
    <string name="page_Tween_Animation">Tween animation</string>
    <string name="page_Frame_Animation">Frame animation</string>
    <string name="page_Property_Animation">Property animation</string>
    <string name="page_widget">Widget</string>
    <string name="page_CustomView">Custom View</string>
    <string name="page_view_location">View location</string>
    <string name="page_CustomView4CascadeLayout">Custom View 4 CascadeLayout</string>
    <string name="page_ConstraintLayout">ConstraintLayout</string>
    <string name="page_linearLayout">LinearLayout</string>
    <string name="page_LinearLayout_CanNotChangeColor">LinearLayout can not change color</string>
    <string name="page_linearLayout_LayoutGravityAndGravity">LinearLayout - LayoutGravity And Gravity</string>
    <string name="page_ViewGroup">ViewGroup</string>
    <string name="page_FrameLayout">FrameLayout</string>
    <string name="page_Button">Button</string>
    <string name="page_TextView">TextView</string>
    <string name="page_TextView_4_highlight_digital_clock">TextView - Highlight Digital Clock</string>
    <string name="page_SeekBar">SeekBar</string>
    <string name="page_RatingBar">SeekBar</string>
    <string name="page_Progressbar">ProgressBar</string>
    <string name="page_ken_burns_image">Ken Burns Image</string>
    <string name="page_get_view_size_in_activity_oncreate">get View width and height in onCreate()</string>
    <string name="page_videoview_rotate_screen_tip">Video view rotate screen tip </string>
    <string name="page_imageView">ImageView</string>
    <string name="page_imageView_scaleType">ImageView scaleType</string>
    <string name="page_recyclerView_4_drag_reorder_list">RecyclerView - drag and reorder list</string>
    <string name="page_ListView">ListView</string>
    <string name="page_spinner">Spinner</string>
    <string name="page_TabLayout">TabLayout</string>
    <string name="page_check_vector_rendering_time">Check vector rendering time</string>
    <string name="page_webView">WebView</string>
    <string name="page_app_chooser">Show an app chooser</string>
    <string name="page_RadioButton">RadioButton</string>
    <string name="page_Switch">Switch</string>
    <string name="page_qa_about_view">QA about view</string>
    <string name="page_security">Security</string>
    <string name="page_background_tasks">Background tasks</string>
    <string name="page_threadPoolExecutor">ThreadPoolExecutor</string>
    <string name="page_asynctask">AsyncTask</string>
    <string name="page_OtherUI">Other UI</string>
    <string name="page_Notification">Notification</string>
    <string name="page_Toast">Toast</string>
    <string name="page_ActionBar">ActionBar</string>
    <string name="page_ActionBar_ShowMenu">ActionBar - Show Menu</string>
    <string name="page_ActionBar_Navigation">ActionBar Navigation</string>
    <string name="page_BottomNavigationView">BottomNavigationView</string>
    <string name="page_ViewPager_PagerTitleStrip">ViewPager +PagerTitleStrip = Swipe Page Tab</string>
    <string name="page_PopupWindow">PopupWindow</string>
    <string name="page_Dialog">Dialog</string>
    <string name="page_AlertDialog_DialogFragment">AlertDialog -  DialogFragment</string>
    <string name="page_dialog_style_activity">Dialog style activity</string>
    <string name="page_AlertDialog">AlertDialog</string>
    <string name="page_ProgressDialog">ProgressDialog</string>
    <string name="page_DatePickerDialog">DatePickerDialog</string>
    <string name="page_TimePickerDialog">TimePickerDialog</string>
    <string name="page_Android_Event_handler">Android事件处理</string>
    <string name="page_Configuration">Configuration</string>
    <string name="page_msg_handler">Handler消息处理机制</string>
    <string name="page_sensor">传感器</string>
    <string name="page_GPS">GPS</string>
    <string name="page_network">Network</string>
    <string name="page_simple_client_socket">Client - Use Socket to implement TCP/IP</string>
    <string name="page_multi_thread_client_socket">Multi thread Client - Use Socket to implement TCP/IP</string>
    <string name="page_url">URL</string>
    <string name="page_URLConnection">URLConnection</string>
    <string name="page_HttpURLConnection">HttpURLConnection</string>
    <string name="page_manager_phone_desktop">Manager phone desktop</string>
    <string name="page_set_static_wallpaper">Set static wallpaper</string>
    <string name="page_app_widget">App widget</string>
    <string name="page_static_shortcut">Static shortcuts</string>
    <string name="page_dynamic_shortcut">dynamic shortcuts</string>
    <string name="page_media">Media</string>
    <string name="page_AudioEffect">AudioEffect</string>
    <string name="page_MediaPlayer_play_audio">MediaPlayer - Play Audio</string>
    <string name="page_SoundPool_play_audio">SoundPool - Play audio</string>
    <string name="page_MediaPlayer_SurfaceView_play_video">MediaPlayer + SurfaceView - Play Video</string>
    <string name="page_VideoView_play_video">VideoView - Play Video</string>
    <string name="page_Camera">Camera</string>
    <string name="page_MediaRecorder_Record_audio">MediaRecorder - Record audio</string>
    <string name="page_MediaRecorder_Record_video">MediaRecorder - Record video</string>
    <string name="page_Screen_Capture">Screen Capture</string>
    <string name="runt_time_permission">Runtime Permission</string>
    <string name="runt_time_permission_topic">通过发送和接收短信测试Runtime Permission</string>
    <string name="rxPermissions_topic">RxPermissions lib demo</string>
    <string name="send_message">Send info</string>
    <string name="receive_message">Receive info</string>
    <string name="send_receive_message">Send and receive info</string>
    <string name="permission_rationale_4_send_message">Send info permission is needed to send info.</string>
    <string name="permission_rationale_4_receive_message">Receive info permission is needed to receive info. </string>
    <string name="permission_rationale_4_send_receive_message">Send and receive info are needed to use info. </string>
    <string name="permission_rationale_4_permission_group_4_sms">SMS permission are needed to use info. </string>
    <string name="request_permission_by_permission_group">Request SMS permission by permission_group</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="update">Update =</string>
    <string name="query">Query</string>
    <string name="search">Search</string>
    <string name="clock">Clock</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="size_30">size 30</string>
    <string name="size_10">size 10</string>
    <string name="font_size">Font size</string>
    <string name="font_color">Font color</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="b_for_result">B for result</string>
    <string name="close">Close</string>
    <string name="return_result">Return result</string>
    <string name="jump_then_finish">Jump, then Finish</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="basic_dialog">Basic Dialog</string>
    <string name="show_as_a_dialog_or_as_an_embedded_fragment">Show as  a Dialog or as an Embedded Fragment</string>
    <string name="show_as_a_dialog">Show as a dialog</string>
    <string name="show_as_an_embedded_fragment">Show as an embedded fragment</string>
    <string name="accelerometer">加速度传感器</string>
    <string name="orientation">方向传感器</string>
    <string name="gyro">陀螺仪传感器</string>
    <string name="magnetic">磁场传感器</string>
    <string name="gravity">重力传感器</string>
    <string name="linearAcc">线性加速度传感器</string>
    <string name="temperature">温度传感器</string>
    <string name="light">光传感器</string>
    <string name="pressure">压力传感器</string>
    <string name="hear_rate">心率传感器</string>
</resources>