<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/topic"
        style="@style/topic"
        android:text="@string/page_DialogFragment" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_topic">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/tv"
                    android:text="@string/page_DialogFragment" />

                <TextView
                    style="@style/tv"
                    android:text="@string/page_Base_DialogFragment" />

                <Button
                    android:id="@+id/btn1"
                    style="@style/btn.small"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/btn2"
                    style="@style/btn.small"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/btn2"
                    style="@style/btn.small"
                    android:text="@string/_3" />

                <Button
                    android:id="@+id/btn4"
                    style="@style/btn.small"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/btn5"
                    style="@style/btn.small"
                    android:text="@string/_5" />

                <Button
                    android:id="@+id/btn6"
                    style="@style/btn.small"
                    android:text="@string/_6" />

                <Button
                    android:id="@+id/btn7"
                    style="@style/btn.small"
                    android:text="@string/_7" />

                <Button
                    android:id="@+id/btn8"
                    style="@style/btn.small"
                    android:text="@string/_8" />

                <Button
                    android:id="@+id/btn9"
                    style="@style/btn.small"
                    android:text="@string/_9" />

                <Button
                    android:id="@+id/page_AlertDialog_DialogFragment"
                    style="@style/btn.small"
                    android:text="@string/page_AlertDialog_DialogFragment" />

                <TextView
                    style="@style/tv"
                    android:text="@string/show_as_a_dialog_or_as_an_embedded_fragment" />

                <!--<Button-->
                    <!--android:id="@+id/showAsDialogOrEmbeddedFragment"-->
                    <!--style="@style/btn.small"-->
                    <!--android:text="@string/show_as_a_dialog_or_as_an_embedded_fragment" />-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/showAsDialog"
                        style="@style/btn.small"
                        android:text="@string/show_as_a_dialog" />

                    <Button
                        android:id="@+id/showAsEmbeddedFragment"
                        style="@style/btn.small"
                        android:text="@string/show_as_an_embedded_fragment" />
                </LinearLayout>

                <Button
                    android:id="@+id/pageBottomSheetDialogFragment"
                    style="@style/btn.small"
                    android:text="@string/page_BottomSheetDialogFragment" />
            </LinearLayout>

            <View style="@style/div" />

            <Button
                android:id="@+id/pageDialogStyleActivity"
                style="@style/btn.small"
                android:text="@string/page_dialog_style_activity" />

            <View style="@style/div" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/tv"
                    android:text="Dialog(Depressed)" />

                <Button
                    android:id="@+id/page_AlertDialog"
                    style="@style/btn.small"
                    android:text="@string/page_AlertDialog" />

                <Button
                    android:id="@+id/pageProgressDialog"
                    style="@style/btn.small"
                    android:text="@string/page_ProgressDialog" />

                <Button
                    android:id="@+id/pageDatePickerDialog"
                    style="@style/btn.small"
                    android:text="@string/page_DatePickerDialog" />

                <Button
                    android:id="@+id/pageTimePickerDialog"
                    style="@style/btn.small"
                    android:text="@string/page_TimePickerDialog" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fragmentRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</FrameLayout>