<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/topic"
            android:text="@string/page_sensor" />


        <TextView
            style="@style/tv"
            android:text="@string/accelerometer" />

        <TextView
            android:id="@+id/accelerometer"
            style="@style/tv" />

        <TextView
            style="@style/tv"
            android:text="@string/orientation" />

        <TextView
            android:id="@+id/etOrientation"
            style="@style/tv" />

        <TextView
            android:id="@+id/etOrientation2"
            style="@style/tv" />

        <ImageView
            android:id="@+id/compressImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:src="@drawable/compress" />

        <com.hades.example.android.sensor.GradienterView
            android:id="@+id/gradienterView"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <TextView
            style="@style/tv"
            android:text="@string/gyro" />

        <TextView
            android:id="@+id/etGyro"
            style="@style/tv" />

        <TextView
            style="@style/tv"
            android:text="@string/magnetic" />

        <TextView
            android:id="@+id/etMagnetic"
            style="@style/tv" />

        <TextView
            style="@style/tv"
            android:text="@string/gravity" />

        <TextView
            android:id="@+id/etGravity"
            style="@style/tv" />

        <TextView
            style="@style/tv"
            android:text="@string/linearAcc" />

        <TextView
            android:id="@+id/etLinearAcc"
            style="@style/tv" />

        <TextView
            style="@style/tv"
            android:text="@string/temperature" />

        <TextView
            android:id="@+id/etTemerature"
            style="@style/tv" />

        <TextView
            style="@style/tv"
            android:text="@string/light" />

        <TextView
            android:id="@+id/etLight"
            style="@style/tv" />

        <TextView
            style="@style/tv"
            android:text="@string/pressure" />

        <TextView
            android:id="@+id/etPressure"
            style="@style/tv" />

        <TextView
            style="@style/tv"
            android:text="@string/hear_rate" />

        <TextView
            android:id="@+id/etHearRate"
            style="@style/tv" />
    </LinearLayout>
</ScrollView>