<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/topic"
        android:text="@string/page_sqlitedatabase" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/insert"
            style="@style/btn.small"
            android:text="@string/insert" />

        <Button
            android:id="@+id/query"
            style="@style/btn.small"
            android:text="@string/query" />

        <Button
            android:id="@+id/update"
            style="@style/btn.small"
            android:text="@string/update" />

        <Button
            android:id="@+id/delete"
            style="@style/btn.small"
            android:text="@string/delete" />
    </LinearLayout>
</RelativeLayout>