<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/topic"
        style="@style/topic"
        android:text="@string/page_OtherUI" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_topic">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/pageNotification"
                style="@style/btn.small"
                android:text="@string/page_Notification" />

            <Button
                android:id="@+id/pageToast"
                style="@style/btn.small"
                android:text="@string/page_Toast" />

            <Button
                android:id="@+id/pageActionBar"
                style="@style/btn.small"
                android:text="@string/page_ActionBar" />

            <Button
                android:id="@+id/pagePopupWindow"
                style="@style/btn.small"
                android:text="@string/page_PopupWindow" />

            <Button
                android:id="@+id/pageDialog"
                style="@style/btn.small"
                android:text="@string/page_Dialog" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fragmentRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>