<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/topic"
        android:text="@string/page_activity_start_and_finish" />

    <TextView
        style="@style/tv"
        android:layout_centerInParent="true"
        android:text="@string/b"
        android:textColor="@android:color/holo_green_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/pageA"
                style="@style/btn.small"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"

                android:text="@string/a" />

            <Button
                android:id="@+id/jumpThemFinish"
                style="@style/btn.small"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/jump_then_finish" />

            <Button
                android:id="@+id/close"
                style="@style/btn.small"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:text="@string/close" />
        </RelativeLayout>

        <View style="@style/div" />

        <Button
            android:id="@+id/returnResult"
            style="@style/btn.small"
            android:text="@string/return_result" />

    </LinearLayout>
</RelativeLayout>