<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/topic"
        style="@style/topic"
        android:text="@string/page_network" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_topic">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/pageSimpleSocketClient"
                style="@style/btn.small"
                android:text="@string/page_simple_client_socket" />

            <Button
                android:id="@+id/pageMultiThreadSocketClient"
                style="@style/btn.small"
                android:text="@string/page_multi_thread_client_socket" />

            <Button
                android:id="@+id/pageURL"
                style="@style/btn.small"
                android:text="@string/page_url" />

            <Button
                android:id="@+id/pageURLConnection"
                style="@style/btn.small"
                android:text="@string/page_URLConnection" />

            <Button
                android:id="@+id/pageHttpURLConnection"
                style="@style/btn.small"
                android:text="@string/page_HttpURLConnection" />

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fragmentRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>