<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/topic"
        style="@style/topic"
        android:text="@string/page_threadPoolExecutor" />

    <TextView
        android:id="@+id/numInfo"
        style="@style/tv.small"
        android:layout_centerVertical="true"
        android:layout_marginStart="50dp"
        android:text="0 - 0" />

    <TextView
        android:id="@+id/progressInfo"
        style="@style/tv.small"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start"
            style="@style/btn.small"
            android:text="@string/start" />

        <Button
            android:id="@+id/pause"
            style="@style/btn.small"
            android:text="@string/pause" />

        <Button
            android:id="@+id/cancel"
            style="@style/btn.small"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/end"
            style="@style/btn.small"
            android:text="@string/end" />
    </LinearLayout>
</RelativeLayout>