<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/topic"
        android:text="@string/page_activity_start_and_finish" />

    <TextView
        style="@style/tv"
        android:layout_centerInParent="true"
        android:text="@string/a"
        android:textColor="@android:color/holo_green_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/pageB"
            style="@style/btn.small"
            android:text="@string/b" />

        <Button
            android:id="@+id/pageBForResult"
            style="@style/btn.small"
            android:text="@string/b_for_result" />
    </LinearLayout>
</RelativeLayout>